feat: add initial balance refresh flow and harden rpc ingestion